# deepfry-gui

./: Cargo.toml  Dioxus.toml
assets/: main.css
deepfry/: Cargo.toml
deepfry/src/: lib.rs  main.rs
src/: main.rs
